@@ -266,6 +266,7 @@
 	</sublayer>
 	<label>
 		<property name="color" value="#404040ff" />
+		<property name="font-size" level="6" value="10" />
 		<property name="font-size" level="7" value="10" />
 		<property name="font-size" level="8" value="12" />
 		<property name="font-size" level="10" value="14" />
