@@ -1807,7 +1807,7 @@ Restaurants</property>
 	      <property name="is_important">False</property>
 
 	      <child>
-		<widget class="GtkButton" id="button34">
+		<widget class="GtkButton" id="zoomoutbutton">
 		  <property name="visible">True</property>
 		  <property name="relief">GTK_RELIEF_NONE</property>
 		  <property name="focus_on_click">False</property>
@@ -1876,7 +1876,7 @@ Restaurants</property>
 	      <property name="is_important">False</property>
 
 	      <child>
-		<widget class="GtkButton" id="button35">
+		<widget class="GtkButton" id="zoominbutton">
 		  <property name="visible">True</property>
 		  <property name="relief">GTK_RELIEF_NONE</property>
 		  <property name="focus_on_click">False</property>
@@ -2031,7 +2031,7 @@ Restaurants</property>
 			      <child>
 				<widget class="GtkLabel" id="label92260">
 				  <property name="visible">True</property>
-				  <property name="label" translatable="yes">&lt;span size=&quot;small&quot;&gt;_Plot Results&lt;/span&gt;</property>
+				  <property name="label" translatable="yes">&lt;span size=&quot;small&quot;&gt;_Label all results on map&lt;/span&gt;</property>
 				  <property name="use_underline">True</property>
 				  <property name="use_markup">True</property>
 				  <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -2416,6 +2416,7 @@ Restaurants</property>
 			  <property name="padding">0</property>
 			  <property name="expand">False</property>
 			  <property name="fill">True</property>
+			  <property name="pack_type">GTK_PACK_END</property>
 			</packing>
 		      </child>
 		    </widget>
